infrastructure/policy/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag

spec:
  admission: true
  background: true
  emitWarning: false
  validationFailureAction: Audit

  rules:
    - name: require-image-tag
      skipBackgroundRequests: false

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        allowExistingViolations: false
        message: "Images with :latest are not allowed.."

        pattern:
          spec:
            containers:
              - image: "!*:latest"
